Bug 438622 - Launch feedback cursor animation does not respect the timeout on Wayland
Summary: Launch feedback cursor animation does not respect the timeout on Wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.21.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
: 448197 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-06-14 15:05 UTC by Nate Graham
Modified: 2022-02-09 15:38 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-06-14 15:05:53 UTC
Git Master everything on top of Fedora 34.

STEPS TO REPRODUCE
1. Open Konsole
2. ls in a directory with any files
3. Command-Click on a file to open it in an external app

OBSERVED RESULT
The cursor shows  a bouncing app icon which bounces forever until another app is activated

EXPECTED RESULT
The bouncy icon should stop after the timeout specified in the Launch Feedback KCM (defaults to 5 seconds)


Might also affect the task manager's animation, but I can't  get it to show up so I can't test that.
Comment 1 Patrick Silva 2021-06-14 18:37:49 UTC
I noticed this issue on neon unstable a few days ago:

1. open a text file with Kate via Dolphin
2. minimize Kate
3. repeat the step 1 with another text file
Comment 2 Patrick Silva 2022-01-10 20:44:00 UTC
*** Bug 448197 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2022-01-18 09:40:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1903
Comment 4 David Redondo 2022-01-25 10:41:40 UTC
Git commit 3f7133a022788115acf001d54323ab2bcc2355a1 by David Redondo.
Committed on 25/01/2022 at 10:15.
Pushed by davidre into branch 'master'.

Apply timeout to startfeedback for xdg activation

Since xdg activation startups do not time out automatically
run a timer for each start up in the effect.
FIXED-IN:5.24

M  +24   -11   src/effects/startupfeedback/startupfeedback.cpp
M  +11   -2    src/effects/startupfeedback/startupfeedback.h

https://invent.kde.org/plasma/kwin/commit/3f7133a022788115acf001d54323ab2bcc2355a1
Comment 5 Vlad Zahorodnii 2022-01-25 10:44:14 UTC
Git commit 356f78aa4ce42c4d2d028c3c830f41d85c0bada4 by Vlad Zahorodnii, on behalf of David Redondo.
Committed on 25/01/2022 at 10:44.
Pushed by vladz into branch 'Plasma/5.24'.

Apply timeout to startfeedback for xdg activation

Since xdg activation startups do not time out automatically
run a timer for each start up in the effect.
FIXED-IN:5.24


(cherry picked from commit 3f7133a022788115acf001d54323ab2bcc2355a1)

M  +24   -11   src/effects/startupfeedback/startupfeedback.cpp
M  +11   -2    src/effects/startupfeedback/startupfeedback.h

https://invent.kde.org/plasma/kwin/commit/356f78aa4ce42c4d2d028c3c830f41d85c0bada4
Comment 6 Patrick Silva 2022-01-27 11:44:52 UTC
I see no launch feedback after the provided steps on neon unstable.
Comment 7 Nate Graham 2022-01-28 00:40:23 UTC
Works for me FWIW.
Comment 8 Patrick Silva 2022-02-09 15:29:03 UTC
I see no launch feedback after these steps on Plasma 5.24:

1. Open Konsole
2. ls in a directory with any files
3. ctrl-click on a file to open it in an external app

Operating System: Arch Linux
KDE Plasma Version: 5.24.0
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 9 Patrick Silva 2022-02-09 15:34:30 UTC
(In reply to Patrick Silva from comment #8)
> I see no launch feedback after these steps on Plasma 5.24:
> 
> 1. Open Konsole
> 2. ls in a directory with any files
> 3. ctrl-click on a file to open it in an external app
> 
> Operating System: Arch Linux
> KDE Plasma Version: 5.24.0
> KDE Frameworks Version: 5.90.0
> Qt Version: 5.15.2
> Graphics Platform: Wayland

I see no launch feedback on opening a text file with Kate.
Launch feedback is triggered when I open a pdf with Okular, an image with Gwenview, a zip archive with Ark or a torrent with Deluge.
Comment 10 Vlad Zahorodnii 2022-02-09 15:38:18 UTC
(In reply to Patrick Silva from comment #8)
> I see no launch feedback after these steps on Plasma 5.24:
> 
> 1. Open Konsole
> 2. ls in a directory with any files
> 3. ctrl-click on a file to open it in an external app
> 
> Operating System: Arch Linux
> KDE Plasma Version: 5.24.0
> KDE Frameworks Version: 5.90.0
> Qt Version: 5.15.2
> Graphics Platform: Wayland

That sounds like a konsole issue.